run on rk3588 successfully

--- a/.bazelrc
+++ b/.bazelrc
@@ -100,3 +100,10 @@ try-import %workspace%/.configure.bazelrc
 
 # This bazelrc file can be used for user-specific custom build settings.
 try-import %workspace%/.user.bazelrc
+
+build:gcc_config --crosstool_top=//toolchain:gcc_suite
+build:gcc_config --cpu=aarch64
+build:gcc_config --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build:gcc_config --verbose_failures
+# build:gcc_config --sandbox_debug
+
