--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@ mediapipe/provisioning_profile.mobileprovision
 node_modules/
 .configure.bazelrc
 .user.bazelrc
+
+\.idea/
+
+\.vscode/
+
+\build/
+
+*.pyc
+
+__init__\.py
+
+third_party/BUILD\.backup
+
+mediapipe/__init__\.py\.backup
+
+out/aarch64/
